<resources>
    <string name="app_name">Homework</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account_login_text">账号登录</string>
    <string name="account_hint">请填写账号</string>
    <string name="password_hint">请填写密码</string>
    <string name="regist_text">账号注册</string>
    <string name="argument_text">软件许可及服务协议</string>
    <string name="agree_text">已阅读并同意</string>
    <string name="singer_text">歌手：%s</string>
    <string name="name_text">歌名：%s</string>
</resources>
